# pyslalib

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  README.txt  dat.f  get_docstring.py  meson.build  pyproject.toml  requirements.txt  setup.py  slalib.pyf  stdeb.cfg
.github/workflows/: build_linux_bdist_wheel.yml  build_windows_bdist_wheel.yml
lib/: __init__.py
pyslalib/: __init__.py  _version.py  docstrings.json  meson.build
src/: LICENSE  meson.build  slalib.pyf
test/: test_slalib.py
tools/: f2py_mod.py  get_docstring.py
