# SLALIB source files
slalib_src = [
  'addet.f',
  'afin.f',
  'airmas.f',
  'altaz.f',
  'amp.f',
  'ampqk.f',
  'aop.f',
  'aoppa.f',
  'aoppat.f',
  'aopqk.f',
  'atmdsp.f',
  'atms.f',
  'atmt.f',
  'av2m.f',
  'bear.f',
  'caf2r.f',
  'caldj.f',
  'calyd.f',
  'cc2s.f',
  'cc62s.f',
  'cd2tf.f',
  'cldj.f',
  'clyd.f',
  'combn.f',
  'cr2af.f',
  'cr2tf.f',
  'cs2c.f',
  'cs2c6.f',
  'ctf2d.f',
  'ctf2r.f',
  'daf2r.f',
  'dafin.f',
  'dat.f',
  'dav2m.f',
  'dbear.f',
  'dbjin.f',
  'dc62s.f',
  'dcc2s.f',
  'dcmpf.f',
  'dcs2c.f',
  'dd2tf.f',
  'de2h.f',
  'deuler.f',
  'dfltin.f',
  'dh2e.f',
  'dimxv.f',
  'djcal.f',
  'djcl.f',
  'dm2av.f',
  'dmat.f',
  'dmoon.f',
  'dmxm.f',
  'dmxv.f',
  'dpav.f',
  'dr2af.f',
  'dr2tf.f',
  'drange.f',
  'dranrm.f',
  'ds2c6.f',
  'ds2tp.f',
  'dsep.f',
  'dsepv.f',
  'dt.f',
  'dtf2d.f',
  'dtf2r.f',
  'dtp2s.f',
  'dtp2v.f',
  'dtps2c.f',
  'dtpv2c.f',
  'dtt.f',
  'dv2tp.f',
  'dvdv.f',
  'dvn.f',
  'dvxv.f',
  'e2h.f',
  'earth.f',
  'ecleq.f',
  'ecmat.f',
  'ecor.f',
  'eg50.f',
  'el2ue.f',
  'epb.f',
  'epb2d.f',
  'epco.f',
  'epj.f',
  'epj2d.f',
  'epv.f',
  'eqecl.f',
  'eqeqx.f',
  'eqgal.f',
  'etrms.f',
  'euler.f',
  'evp.f',
  'fitxy.f',
  'fk425.f',
  'fk45z.f',
  'fk524.f',
  'fk52h.f',
  'fk54z.f',
  'fk5hz.f',
  'flotin.f',
  'galeq.f',
  'galsup.f',
  'ge50.f',
  'geoc.f',
  'gmst.f',
  'gmsta.f',
  'h2e.f',
  'h2fk5.f',
  'hfk5z.f',
  'idchf.f',
  'idchi.f',
  'imxv.f',
  'intin.f',
  'invf.f',
  'kbj.f',
  'm2av.f',
  'map.f',
  'mappa.f',
  'mapqk.f',
  'mapqkz.f',
  'moon.f',
  'mxm.f',
  'mxv.f',
  'nut.f',
  'nutc.f',
  'nutc80.f',
  'oap.f',
  'oapqk.f',
  'obs.f',
  'pa.f',
  'pav.f',
  'pcd.f',
  'pda2h.f',
  'pdq2h.f',
  'permut.f',
  'pertel.f',
  'pertue.f',
  'planel.f',
  'planet.f',
  'plante.f',
  'plantu.f',
  'pm.f',
  'polmo.f',
  'prebn.f',
  'prec.f',
  'preces.f',
  'precl.f',
  'prenut.f',
  'pv2el.f',
  'pv2ue.f',
  'pvobs.f',
  'pxy.f',
  'range.f',
  'ranorm.f',
  'rcc.f',
  'rdplan.f',
  'refco.f',
  'refcoq.f',
  'refro.f',
  'refv.f',
  'refz.f',
  'rverot.f',
  'rvgalc.f',
  'rvlg.f',
  'rvlsrd.f',
  'rvlsrk.f',
  's2tp.f',
  'sep.f',
  'sepv.f',
  'smat.f',
  'subet.f',
  'supgal.f',
  'svd.f',
  'svdcov.f',
  'svdsol.f',
  'tp2s.f',
  'tp2v.f',
  'tps2c.f',
  'tpv2c.f',
  'ue2el.f',
  'ue2pv.f',
  'unpcd.f',
  'v2tp.f',
  'vdv.f',
  'veri.f',
  'vers.f',
  'vn.f',
  'vxv.f',
  'xy2xy.f',
  'zd.f',
]

# SLALIB headers
# inc_sla = include_directories('.')

# Shared library SLALIB
sla_lib = static_library('sla', slalib_src)

# Create python wrappers
slalib_module = custom_target(
  input : ['slalib.pyf'],
  output : [
    'slalibmodule.c', 
    'slalib-f2pywrappers.f'
  ],
  command : [
    py3, 
    f2py_mod, 
    '-i', 
    '@INPUT@', 
    '-o', 
    '@OUTDIR@'
  ]
)

inc_sla = include_directories('.')

# Build extension module
py3.extension_module(
  'slalib',
  slalib_module,
  link_with: [sla_lib],
  link_language: 'fortran',
  dependencies : deps,
  include_directories: [inc_np, inc_f2py, inc_sla],
  install : true,
  subdir: 'pyslalib'
)

# docstring = custom_target(
#   input: slalib_src + ['slalib.pyf', 'slalib-f2pywrappers.f'],
#   output: ['docstring_pickle.pkl'],
#   command: [
#     py3,
#       'tools/get_docstring.py',
#       '-i',
#       '@INPUT@',
#       '-o',
#       '@OUTPUT@'
#   ]
# )


